--- a/public/templates/lp/css/amination.css
+++ b/public/templates/lp/css/amination.css
@@ -270,4 +270,4 @@ html * {
 
 [data-aos-delay="1000"].anim.aos-animate .bg-wrap .inn {
   transition-delay: 1s;
-}
+}/*# sourceMappingURL=amination.css.map */
