--- a/public/templates/lp/css/form.css
+++ b/public/templates/lp/css/form.css
@@ -286,8 +286,7 @@ h1 {
   height: 4.8rem;
   background: #eaedf2;
   font-size: 1.8rem;
-  -moz-appearance: none;
-       appearance: none;
+  appearance: none;
   -webkit-appearance: none;
 }
 @media screen and (max-width: 767px) {
@@ -374,6 +373,7 @@ textarea.form-control {
   background-size: contain;
   left: 3.4rem;
   top: 50%;
+  -webkit-transform: translate(0%, -50%);
   transform: translate(0%, -50%);
 }
 .form-action button::after {
@@ -385,6 +385,7 @@ textarea.form-control {
   background-size: contain;
   right: 3rem;
   top: 50%;
+  -webkit-transform: translate(0%, -50%);
   transform: translate(0%, -50%);
 }
 .form-action button.submit, .form-action button.previous {
@@ -761,8 +762,10 @@ input[type=number] {
 }
 .contact_form dl dd .agree label {
   -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */ /* Konqueror HTML */
-  -moz-user-select: none; /* Old versions of Firefox */ /* Internet Explorer/Edge */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none; /* Non-prefixed ver */
 }
 @media screen and (max-width: 767px) {
@@ -882,7 +885,6 @@ input[type=number] {
 }
 .contact_form .contact_form-agree {
   width: 34rem;
-  width: -moz-fit-content;
   width: fit-content;
   margin: 0 auto;
   margin-top: 3rem;
@@ -1034,8 +1036,7 @@ input[type=number] {
 .preview .preview_img img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .preview .preview_pdf {
   width: 5rem;
@@ -1095,7 +1096,6 @@ input[type=number] {
 }
 @media screen and (min-width: 768px) {
   #form_step .step_lines {
-    width: -moz-fit-content;
     width: fit-content;
     min-width: auto;
     margin: 0 auto;
@@ -1259,9 +1259,7 @@ select {
   font-size: inherit;
   color: inherit;
   min-height: 3.9rem;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  appearance: none;
   vertical-align: middle;
   background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right 0.75rem center;
   background-size: 8px 10px;
@@ -1306,4 +1304,4 @@ select {
 }
 .section__thanks .container .title-public {
   margin-bottom: 5rem;
-}
+}/*# sourceMappingURL=form.css.map */
