--- a/public/templates/lp/css/style.css
+++ b/public/templates/lp/css/style.css
@@ -341,8 +341,6 @@ a {
     left: -1rem;
     transition: 0.3s;
   }
-}
-@media screen and (max-width: 767px) {
   .hd-menu .span-container span {
     height: 0.3rem;
     background: #123ba7;
@@ -481,4 +479,4 @@ a {
 }
 #breadcrumb a {
   color: #0c2f9e;
-}
+}/*# sourceMappingURL=style.css.map */
